Bug 1073711: Clean up nsCacheService::CreateSessionInternal; drop useless null-check of 'this' and after 'new', and use nsRefPtr::forget(). r=mayhemer